--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,17 @@
 <resources>
 
     <string name="app_name">iDrink</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_chart">Chart</string>
+    <string name="action_bluetooth_pair">Pair</string>
     <string name="title_activity_log">LogActivity</string>
 
+    <!--  DeviceListActivity -->
+    <string name="scanning">scanning for devices...</string>
+    <string name="select_device">select a device to connect</string>
+    <string name="none_paired">No devices have been paired</string>
+    <string name="none_found">No devices found</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="title_other_devices">Other Available Devices</string>
+    <string name="button_scan">Scan for devices</string>
 </resources>
